Uploading images and updating user details

--- a/weight_loss/local_settings.example
+++ b/weight_loss/local_settings.example
@@ -12,5 +12,8 @@ DATABASES = {
     }
 }
 
-Debug = True
-Production = False
+DEBUG = True
+PRODUCTION = False
+
+
+AUTH_USER_MODEL = 'accounts.User'
